--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Engineering otebook Entries</h2>
+      <h2>Engineering Notebook Entries</h2>
       <p>**All entries shown below are written and edited by me (there may be gaps in page numbers and topic content).**</p>
       <hr>
     </div>
