--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
           </div>
           <div class="col-sm-4">
             <blockquote><i class="fa fa-quote-left"></i>
-              <p>It is absolutely amazing to see students as young as you, working so hard to achieve a difficult task. I would not have known about this wonderful club from the High School if not for this community faire in the library. How can my children get involved? How can I get involved?</p>
+              <p>It is absolutely amazing to see students as young as you, working so hard to achieve a difficult task. I would not have known about this wonderful Vex Robotics club from the South Brunswick High School if not for this community faire in the library. How can my children get involved? How can I get involved?</p>
               <div class="clients-name">
                 <p><strong>Parent</strong><br>
                   <em>SBPL Maker Faire</em></p>
