--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <li><a href="#" data-filter="*" class="active">All</a></li>
             <li><a href="#" data-filter=".ie">Iteration Entries</a></li>
             <li><a href="#" data-filter=".sketch">Sketches</a></li>
-            <li><a href="#" data-filter=".graph">Analysis & Graphs</a></li>
+            <li><a href="#" data-filter=".graph">Analysis and Graphs</a></li>
           </ol>
         </li>
       </ul>
