--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <p>Hello, I am Jasmine Parekh. I am a Junior at South Brunswick High School. One of the clubs that I participate in is the Vex Robotics Team. Last year, I was the captain of 750W. I love robotics and hope to be even more involved next year.</p>
+          <p>Hello, I am Jasmine Parekh. I am a Senior at South Brunswick High School. One of the clubs that I participate in is the Vex Robotics Team. Last year, I was the captain of 750W. I love robotics and hope to be even more involved next year.</p>
           <p1>Below, is a summary of my expertise level for specific areas within robotics as well a full resume. Check it out!</p1>
       </div>
     </div>
@@ -106,7 +106,7 @@
       <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="75"> <span class="percent">75</span> </span>
         <h4>Design</h4>
       </div>
-      <a href="JasmineParekhResume.html" class="btn btn-default btn-lg page-scroll">My Resume</a> </div>
+      <a href="JasmineParekhResume.html" class="btn btn-default btn-lg page-scroll">MY RESUME</a> </div>
     </div>
   </div>
 </div>
