--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="col-md-3 col-sm-6 skill"> <span class="chart" data-percent="75"> <span class="percent">75</span> </span>
         <h4>Design</h4>
       </div>
-      <a href="JasmineParekhResume.pdf" class="btn btn-default btn-lg page-scroll">MY RESUME</a> </div>
+      <a href="JasmineParekhResume.pdf" class="btn btn-default btn-lg page-scroll">RESUME</a> </div>
     </div>
   </div>
 </div>
